# wander

./: .gitignore  CONTRIBUTING.md  README.md  ideas.txt  render.yaml
src/backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test_config.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 20240507_activity_tags.py  20240507_communities.py  20240507_friend_matching.py  20240508_push_notifications.py  20240601_initial.py  20240602_geolocation.py  20240603_admin_panel.py  40d2ff62cd01_add_gamification_streaks_and_badges.py  815da53e3de7_add_safety_privacy_and_refer_fields.py  82bb8e0a0bee_merge_admin_panel_into_enhanced_features.py  ab4984a79513_merge_enhanced_features_branches.py  d33a2cd700f6_add_privacy_settings_to_users.py  d8e706bab571_merge_gamification_privacy_safety_and_.py  f562a3476362_add_user_reports_table.py  f88d6d5d6f7b_merge_geolocation_into_enhanced_features.py
src/backend/app/: config.py  main.py
src/backend/app/api/: deps.py
src/backend/app/core/: exceptions.py  logging.py  security.py
src/backend/app/db/: redis.py  session.py
src/backend/app/models/: __init__.py  activity.py  admin.py  chat_message.py  friend_connection.py  group.py  host.py  push_subscription.py  sos_event.py  user.py  user_block.py  user_history.py  user_report.py  venue.py
src/backend/app/schemas/: activity.py  admin.py  auth.py  chat.py  common.py  community.py  friend.py  group.py  matching.py  push_notification.py  (+4 more)
src/backend/scripts/: seed.py  seed_users.py  verify_seed.py
src/backend/tests/: conftest.py  test_deep.py
(+150 files in other folders)
