[project]
name = "wander-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.1.0",
    "ortools>=9.8.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pgvector>=0.2.0",
    "twilio>=9.0.0",
    "openai>=1.7.0",
    "anthropic>=0.18.0",
    "aiosqlite>=0.22.1",
    "fakeredis>=2.35.1",
    "pytest-asyncio>=0.23.0",
    "python-multipart>=0.0.27",
    "mcp>=1.27.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "httpx-ws>=0.5.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
